--- a/dockerfiles/prometheus/Dockerfile
+++ b/dockerfiles/prometheus/Dockerfile
@@ -1,4 +1,6 @@
 FROM alpine
+LABEL maintainer="jeferson@linuxtips.com.br"
+LABEL version="1.0"
 
 RUN adduser -s /bin/false -D -H prometheus \
     && adduser -s /bin/false -D -H node_exporter \
