--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,11 +36,13 @@ services:
 
   cadvisor:
     image: google/cadvisor
+    hostname: '{{.Node.ID}}'
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
       - backend
     deploy:
