--- a/dockerfiles/prometheus/Dockerfile
+++ b/dockerfiles/prometheus/Dockerfile
@@ -1,19 +1,22 @@
 FROM alpine
+
 LABEL maintainer="jeferson@linuxtips.com.br"
 LABEL version="1.0"
+
+ENV prometheus_version 2.0.0
 
 RUN adduser -s /bin/false -D -H prometheus \
     && adduser -s /bin/false -D -H node_exporter \
     && apk update \
     && apk --no-cache add curl \
-    && curl -LO https://github.com/prometheus/prometheus/releases/download/v2.0.0/prometheus-2.0.0.linux-amd64.tar.gz \
-    && tar -xvzf prometheus-2.0.0.linux-amd64.tar.gz \
+    && curl -LO https://github.com/prometheus/prometheus/releases/download/v${prometheus_version}/prometheus-${prometheus_version}.linux-amd64.tar.gz \
+    && tar -xvzf prometheus-${prometheus_version}.linux-amd64.tar.gz \
     && mkdir -p /etc/prometheus /var/lib/prometheus \
-    && cp prometheus-2.0.0.linux-amd64/promtool /usr/local/bin/ \
-    && cp prometheus-2.0.0.linux-amd64/prometheus /usr/local/bin/ \
-    && cp -R prometheus-2.0.0.linux-amd64/console_libraries/ /etc/prometheus/ \
-    && cp -R prometheus-2.0.0.linux-amd64/consoles/ /etc/prometheus/ \
-    && rm -rf prometheus-2.0.0.linux-amd64* \
+    && cp prometheus-${prometheus_version}.linux-amd64/promtool /usr/local/bin/ \
+    && cp prometheus-${prometheus_version}.linux-amd64/prometheus /usr/local/bin/ \
+    && cp -R prometheus-${prometheus_version}.linux-amd64/console_libraries/ /etc/prometheus/ \
+    && cp -R prometheus-${prometheus_version}.linux-amd64/consoles/ /etc/prometheus/ \
+    && rm -rf prometheus-${prometheus_version}.linux-amd64* \
     && chown prometheus:prometheus /usr/local/bin/prometheus \
     && chown prometheus:prometheus /usr/local/bin/promtool \
     && chown -R prometheus:prometheus /etc/prometheus \
