add_activate_plugins_grafana

--- a/grafana.config
+++ b/grafana.config
@@ -1,1 +1,2 @@
 GF_SECURITY_ADMIN_PASSWORD=giropops
+GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-piechart-panel,camptocamp-prometheus-alertmanager-datasource,vonage-status-panel
