--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,17 +71,17 @@ services:
     image: rocketchat/rocket.chat:latest
     restart: unless-stopped
     volumes:
-      - ./uploads:/app/uploads
+      - rocket_uploads:/app/uploads
     environment:
       - PORT=3080
-      - ROOT_URL=http://localhost:3080
-      - MONGO_URL=mongodb://mongo:27017/rocketchat
-      - MONGO_OPLOG_URL=mongodb://mongo:27017/local
+      - ROOT_URL=http://YOUR_IP:3080
+      - MONGO_URL=mongodb://giropops_mongo:27017/rocketchat
+      - MONGO_OPLOG_URL=mongodb://giropops_mongo:27017/local
 #      - MAIL_URL=smtp://user:pass@smtp.email
 #      - HTTP_PROXY=http://proxy.domain.com
 #      - HTTPS_PROXY=http://proxy.domain.com
     depends_on:
-      - mongo
+      - giropops_mongo
     ports:
       - 3080:3080
 
@@ -89,15 +89,15 @@ services:
     image: mongo:3.2
     restart: unless-stopped
     volumes:
-     - ./data/db:/data/db
+     - mongodb_data:/data/db
      #- ./data/dump:/dump
     command: mongod --smallfiles --oplogSize 128 --replSet rs0
 
   mongo-init-replica:
     image: mongo:3.2
-    command: 'mongo mongo/rocketchat --eval "rs.initiate({ _id: ''rs0'', members: [ { _id: 0, host: ''localhost:27017'' } ]})"'
+    command: 'mongo giropops_mongo/rocketchat --eval "rs.initiate({ _id: ''rs0'', members: [ { _id: 0, host: ''localhost:27017'' } ]})"'
     depends_on:
-      - mongo
+      - giropops_mongo
 
 networks:
   frontend:
@@ -106,3 +106,5 @@ networks:
 volumes:
     prometheus_data:
     grafana_data:
+    rocket_uploads:
+    mongodb_data:
