--- a/dockerfiles/prometheus/Dockerfile
+++ b/dockerfiles/prometheus/Dockerfile
@@ -3,25 +3,22 @@ FROM alpine
 LABEL maintainer="jeferson@linuxtips.com.br"
 LABEL version="1.0"
 
-ENV prometheus_version 2.0.0
+ARG PROMETHEUS_VERSION=2.0.0
 
-RUN adduser -s /bin/false -D -H prometheus \
-    && adduser -s /bin/false -D -H node_exporter \
-    && apk update \
-    && apk --no-cache add curl \
-    && curl -LO https://github.com/prometheus/prometheus/releases/download/v${prometheus_version}/prometheus-${prometheus_version}.linux-amd64.tar.gz \
-    && tar -xvzf prometheus-${prometheus_version}.linux-amd64.tar.gz \
-    && mkdir -p /etc/prometheus /var/lib/prometheus \
-    && cp prometheus-${prometheus_version}.linux-amd64/promtool /usr/local/bin/ \
-    && cp prometheus-${prometheus_version}.linux-amd64/prometheus /usr/local/bin/ \
-    && cp -R prometheus-${prometheus_version}.linux-amd64/console_libraries/ /etc/prometheus/ \
-    && cp -R prometheus-${prometheus_version}.linux-amd64/consoles/ /etc/prometheus/ \
-    && rm -rf prometheus-${prometheus_version}.linux-amd64* \
-    && chown prometheus:prometheus /usr/local/bin/prometheus \
-    && chown prometheus:prometheus /usr/local/bin/promtool \
-    && chown -R prometheus:prometheus /etc/prometheus \
-    && chown prometheus:prometheus /var/lib/prometheus \
-    && apk del curl
+RUN adduser -s /bin/false -D -H prometheus && \
+    adduser -s /bin/false -D -H node_exporter && \
+    wget https://github.com/prometheus/prometheus/releases/download/v${PROMETHEUS_VERSION}/prometheus-${PROMETHEUS_VERSION}.linux-amd64.tar.gz && \
+    tar -xvzf prometheus-${prometheus_version}.linux-amd64.tar.gz && \
+    mkdir -p /etc/prometheus /var/lib/prometheus && \
+    cp prometheus-${prometheus_version}.linux-amd64/promtool /usr/local/bin/ && \
+    cp prometheus-${prometheus_version}.linux-amd64/prometheus /usr/local/bin/ && \
+    cp -R prometheus-${prometheus_version}.linux-amd64/console_libraries/ /etc/prometheus/ && \
+    cp -R prometheus-${prometheus_version}.linux-amd64/consoles/ /etc/prometheus/ && \
+    rm -rf prometheus-${prometheus_version}.linux-amd64* && \
+    chown prometheus:prometheus /usr/local/bin/prometheus && \
+    chown prometheus:prometheus /usr/local/bin/promtool && \
+    chown -R prometheus:prometheus /etc/prometheus && \
+    chown prometheus:prometheus /var/lib/prometheus 
 
 VOLUME /etc/prometheus
 
