--- a/dockerfiles/prometheus/Dockerfile
+++ b/dockerfiles/prometheus/Dockerfile
@@ -8,13 +8,13 @@ ARG PROMETHEUS_VERSION=2.0.0
 RUN adduser -s /bin/false -D -H prometheus && \
     adduser -s /bin/false -D -H node_exporter && \
     wget https://github.com/prometheus/prometheus/releases/download/v${PROMETHEUS_VERSION}/prometheus-${PROMETHEUS_VERSION}.linux-amd64.tar.gz && \
-    tar -xvzf prometheus-${prometheus_version}.linux-amd64.tar.gz && \
+    tar -xvzf prometheus-${PROMETHEUS_VERSION}.linux-amd64.tar.gz && \
     mkdir -p /etc/prometheus /var/lib/prometheus && \
-    cp prometheus-${prometheus_version}.linux-amd64/promtool /usr/local/bin/ && \
-    cp prometheus-${prometheus_version}.linux-amd64/prometheus /usr/local/bin/ && \
-    cp -R prometheus-${prometheus_version}.linux-amd64/console_libraries/ /etc/prometheus/ && \
-    cp -R prometheus-${prometheus_version}.linux-amd64/consoles/ /etc/prometheus/ && \
-    rm -rf prometheus-${prometheus_version}.linux-amd64* && \
+    cp prometheus-${PROMETHEUS_VERSION}.linux-amd64/promtool /usr/local/bin/ && \
+    cp prometheus-${PROMETHEUS_VERSION}.linux-amd64/prometheus /usr/local/bin/ && \
+    cp -R prometheus-${PROMETHEUS_VERSION}.linux-amd64/console_libraries/ /etc/prometheus/ && \
+    cp -R prometheus-${PROMETHEUS_VERSION}.linux-amd64/consoles/ /etc/prometheus/ && \
+    rm -rf prometheus-${PROMETHEUS_VERSION}.linux-amd64* && \
     chown prometheus:prometheus /usr/local/bin/prometheus && \
     chown prometheus:prometheus /usr/local/bin/promtool && \
     chown -R prometheus:prometheus /etc/prometheus && \
