Suggesting correction of commented Slack piece
Jefferson, I'm a big fan of this project!
Adding what danielprietsch noticed on Issue #12 as a suggested fix.
This might help others not to spend time troubleshooting why using Slack did not work there (when commenting out RocketChat in favor of Slack).

--- a/conf/alertmanager/config.yml
+++ b/conf/alertmanager/config.yml
@@ -17,7 +17,7 @@ receivers:
 #route:
 #   receiver: 'slack'
 #
-#receivers
+#receivers:
 #   - name: 'slack'
 #     slack_configs:
 #        - send_resolved: true
