--- a/conf/prometheus/prometheus.yml
+++ b/conf/prometheus/prometheus.yml
@@ -10,13 +10,13 @@ alerting:
   - scheme: http
     static_configs:
     - targets:
-      - "giropops_alertmanager:9093"
+      - "alertmanager:9093"
 
 scrape_configs:
   - job_name: 'node'
     scrape_interval: 5s
     static_configs:
-         - targets: ['localhost:9090','giropops_cadvisor:8080','giropops_node-exporter:9100']
+         - targets: ['localhost:9090','cadvisor:8080','node-exporter:9100']
   - job_name: 'netdata'
     metrics_path: '/api/v1/allmetrics'
     params:
